syntax = "proto3";

package commandpack;

option go_package="monjjubot/request";

message CommandPackRequest {
  string command = 1;
}

message CommandPackResponse {
  bool status = 1;
  string response = 2;
}

service TelegramBotService{
  //Unary
  rpc CommandPack(CommandPackRequest) returns (CommandPackResponse) {};
}